; ModuleID = '/home/carl/AnghaBench/freebsd/share/examples/kld/cdev/module/extr_cdev.c_mydev_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/share/examples/kld/cdev/module/extr_cdev.c_mydev_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { i32 }
%struct.uio = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [42 x i8] c"mydev_read: dev_t=%lu, uio=%p, ioflag=%d\0A\00", align 1
@len = common dso_local global i64 0, align 8
@buf = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mydev_read(%struct.cdev* %0, %struct.uio* %1, i32 %2) #0 {
  %4 = alloca %struct.cdev*, align 8
  %5 = alloca %struct.uio*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.cdev* %0, %struct.cdev** %4, align 8
  store %struct.uio* %1, %struct.uio** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load %struct.cdev*, %struct.cdev** %4, align 8
  %9 = call i32 @dev2udev(%struct.cdev* %8)
  %10 = load %struct.uio*, %struct.uio** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %9, %struct.uio* %10, i32 %11)
  %13 = load i64, i64* @len, align 8
  %14 = icmp sle i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 -1, i32* %7, align 4
  br label %23

16:                                               ; preds = %3
  %17 = load %struct.uio*, %struct.uio** %5, align 8
  %18 = getelementptr inbounds %struct.uio, %struct.uio* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @copystr(i32* @buf, i32 %21, i32 513, i64* @len)
  br label %23

23:                                               ; preds = %16, %15
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @printf(i8*, i32, %struct.uio*, i32) #1

declare dso_local i32 @dev2udev(%struct.cdev*) #1

declare dso_local i32 @copystr(i32*, i32, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
